Only list profiles which have a valid CM.

REVIEW: 101926
BUG: 277534